# aoc

./: .gitignore  aoc.cabal  stack.yaml
d1/: 1.cpp  1.hs  2.cpp  2.hs
d2/: 1.hs  1.py  2.hs  2.py
d3/: 1.cpp  1.hs  2.cpp  2.hs
d4/: 1.hs  1.lua  2.hs  2.lua
d5/: 1.py
d6/: 1.lua  2.lua
d7/: 1.cpp  2.cpp
d8/: 1.py  2.py
d9/: 1.py  2.py
src/: Main.hs
src/D1/: A.hs  B.hs
src/D2/: A.hs  B.hs
src/D3/: A.hs  B.hs
src/D4/: A.hs  B.hs
src/D5/: A.hs  B.hs
src/D7/: A.hs  B.hs
src/D8/: A.hs  B.hs
