cabal-version:       2.2

name:                aoc
version:             0.1.0.0

executable aoc
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
      D1.A, D1.B,
      D2.A, D2.B,
      D3.A, D3.B,
      D4.A, D4.B,
      D7.A, D7.B
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       regex-tdfa,
                       containers
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
